[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gspread>=6.2.1",
    "oauth2client>=4.1.3",
    "pandas>=3.0.1",
    "paramiko>=4.0.0",
    "requests>=2.32.5",
    "ruff>=0.14.13",
    "tabulate>=0.9.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.37.1",
]
